# crosswords

./: Cargo.toml  Makefile  README.md  res.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
benches/: bench.rs
data/: duplicates.txt  initial.txt  mary.txt  step.txt
src/: grid.rs  initial_grid.rs  lib.rs  library.rs  main.rs  solver.rs  utils.rs  words.rs
tests/: test_grid.rs  test_init_grid.rs  test_library.rs  test_solver.rs  test_words.rs
